Tutorial 64 - React / React-Native - 75 - Configurar el API de Google Maps Parte I

--- a/app.json
+++ b/app.json
@@ -17,9 +17,11 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.vveliz.restaurants"
     },
     "android": {
+      "package": "com.vveliz.restaurants",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
